# MAS_VKR

./: README.md
Map/: .gitignore  CMakeLists.txt  README.md
Map/Map/: CMakeLists.txt  GeoViewMapLayers.h  GeoViewWidget.cpp  GeoViewWidget.h  README.md  main.cpp  resources.qrc
Map/Map/clipper/: CMakeLists.txt
Map/Map/dialogs/: CMakeLists.txt  ContourPreviewDialog.cpp  ContourPreviewDialog.h
Map/Map/features/: CMakeLists.txt  GeoViewCommandFeature.cpp  GeoViewCommandFeature.h  GeoViewContourFeature.cpp  GeoViewContourFeature.h  GeoViewCutoutFeature.cpp  GeoViewCutoutFeature.h  GeoViewInteractionFeature.cpp  GeoViewInteractionFeature.h  GeoViewRobotFeature.cpp  GeoViewRobotFeature.h  GeoViewRouteFeature.cpp  GeoViewRouteFeature.h  RouteAlgorithmConfig.cpp  RouteAlgorithmConfig.h
Map/Map/features/algorithm/: RouteConnectorPolicy.cpp  RouteConnectorPolicy.h  RouteGeometryUtils.cpp  RouteGeometryUtils.h  RouteIslandBuilder.cpp  RouteIslandBuilder.h  RouteIslandStitcher.cpp  RouteIslandStitcher.h
Map/Map/features/algorithm/pipeline/: RoutePipeline.cpp  RoutePipeline.h  RoutePipelineDebug.cpp  RoutePipelineDebug.h  RoutePipelineTypes.h  RoutePipelineVisualizer.cpp  RoutePipelineVisualizer.h  Stage1Prepare.cpp  Stage1Prepare.h  Stage2Sweep.cpp  Stage2Sweep.h  Stage3Filter.cpp  Stage3Filter.h  Stage4Graph.cpp  Stage4Graph.h  Stage5Merge.cpp  Stage5Merge.h  Stage6Routes.cpp  Stage6Routes.h  Stage7Group.cpp  Stage7Group.h  Stage8Stitch.cpp  Stage8Stitch.h  Stage9Approach.cpp  Stage9Approach.h
Map/Map/geometry/: CMakeLists.txt  Contour.cpp  Contour.h  GeoPolyline.cpp  GeoPolyline.h  GeoSegmentBatch.cpp  GeoSegmentBatch.h  RouteCoveragePlanner.cpp  RouteCoveragePlanner.h
Map/Map/layers/: CMakeLists.txt
Map/Map/services/: CMakeLists.txt  GeoJsonParser.cpp  GeoJsonParser.h  RouteCommandBuilder.cpp  RouteCommandBuilder.h
Map/Map/state/: CMakeLists.txt  GeoViewState.h
Map/Map/ui/: CMakeLists.txt  GeoViewUiComposer.cpp  GeoViewUiComposer.h
Map/Map/utils/: CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.h  MapLog.cpp  MapLog.h
Map/lib/: CMakeLists.txt
Map/shared/: CMakeLists.txt
Navigation/: .gitignore  README.md
Navigation/src/navigation_module/: .gitignore  README.md  (+2 more)
Navigation/src/thrust_nav_sim/: README.md  package.xml  setup.cfg  setup.py
Navigation/src/thrust_nav_sim/config/: bridge.yaml
Navigation/src/thrust_nav_sim/launch/: sim.launch.py
Navigation/src/thrust_nav_sim/resource/: thrust_nav_sim
Navigation/src/thrust_nav_sim/rviz/: waypoint_nav.rviz
Navigation/src/thrust_nav_sim/sdf/: thrust_robot.sdf
Navigation/src/thrust_nav_sim/tests/: test_gazebo_waypoint_world.py
Navigation/src/thrust_nav_sim/thrust_nav_sim/: gazebo_waypoint_world.py  spawn_when_world_ready.py
Navigation/src/thrust_nav_sim/worlds/: thrust_world.sdf
(+31 files in other folders)
